@@ -106,6 +106,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Oracle 8               Guy Wicks
 - Pascal                 Tux
 - Perl                   Andreas Gohr, Ben Keen
+- PIC16xxx assembler     Phil Mattison
 - PL/SQL                 Victor Engmark
 - POV-Ray                Carl Fürstenberg
 - PowerShell             Frode Aarebrot
