@@ -21,6 +21,7 @@ Version 1.0.8
      * Gnuplot (milian)
      * KLoneC (Mickael Auger)
      * KLoneC++ (Mickael Auger)
+     * PIC16xxx assembler (Phil Mattison)
      * POV-Ray (Carl Fürstenberg)
      * PowerShell (Frode Aarebrot)
      * Progress (Marco Aurelio de Pasqual)
